# elecbullboard

./: .gitignore  pyproject.toml
elecbullboard/: manage.py
elecbullboard/bboard/: admin.py  models.py  views.py
elecbullboard/bboard/migrations/: 0001_initial.py  0002_rubric_alter_bb_options_alter_bb_content_and_more.py
elecbullboard/bboard/templates/bboard/: index.html
elecbullboard/elecbullboard/: asgi.py  settings.py  urls.py  wsgi.py
